--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "description": "```\r ejecutar npm install para instalar las dependencias del packege.json\r ```",
   "main": "index.js",
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongoose": "^5.9.29",
+    "mongoose-unique-validator": "^2.0.3",
+    "underscore": "^1.11.0"
   },
   "devDependencies": {},
   "scripts": {
